...
            ),
            doneTaskViewModel.completedTasks.isEmpty
                ? const Center(
                    child: Padding(
                      padding: EdgeInsets.only(top: 20),
                      child: Text(
                        "No tasks completed yet.",
                        style: TextStyle(
                          color: Color.fromRGBO(141, 156, 184, 1),
                          fontFamily: "Urbanist",
                          fontSize: 16,
                          fontWeight: FontWeight.w400,
                        ),
...
